--- a/css/pics.css
+++ b/css/pics.css
@@ -5,11 +5,15 @@ body {
 
 h1 {
 	text-align: center;
+	font-family: verdana, arial;
+	text-decoration: underline;
+	color: lightblue;
 }
 
 .hide {
 	display: none;
 }
+
 
 img {
 	float: left;
